--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 __pycache__/snake.cpython-39.pyc
 __pycache__/food.cpython-39.pyc
+__pycache__/scoreboard.cpython-39.py
 __pycache__/scoreboard.cpython-39.pyc
